Ensures Show image is aligned properly on small viewport

--- a/src/components/Show/styles.module.scss
+++ b/src/components/Show/styles.module.scss
@@ -35,7 +35,9 @@
 }
 
 .active {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .inactive {
